force-app/main/default/objects/CPQ_Requester__c/CPQ_Requester__c.object-meta.xml
<CustomObject>
    <description>NPN : CPQ Data validation by Data Team</description>
    <label>CPQ Request</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Request number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPQ Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>