force-app/main/default/objects/CPQ_Requester__c/fields/Account_Lookup_Filter__c.field-meta.xml
<CustomField>
    <fullName>Account_Lookup_Filter__c</fullName>
    <label>Account Lookup Filter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Customer Account</fullName>
                <default>true</default>
                <label>New Customer Account</label>
            </value>
            <value>
                <fullName>NPN Account Registry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>