force-app/main/default/objects/CPQ_Requester__c/fields/Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Cancelled__c</fullName>
    <label>Cancelled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>