force-app/main/default/objects/CPQ_Requester__c/fields/CPQ_Account__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPQ Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account_Lookup_Filter__c</field>
            <operation>equals</operation>
            <valueField>Account.RecordType.Name</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CPQ Requests</relationshipLabel>
    <relationshipName>CPQ_Requesters</relationshipName>
    <type>Lookup</type>
</CustomField>