force-app/main/default/objects/CPQ_Requester__c/fields/CPQ_Contact__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPQ Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contact Account does not Match CPQ Account, Please select the correct Contact</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.CPQ_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>CPQ_Requesters</relationshipName>
    <type>Lookup</type>
</CustomField>