force-app/main/default/objects/CPQ_Requester__c/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead ID</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>CPQ_Requesters</relationshipName>
    <type>Lookup</type>
</CustomField>