force-app/main/default/objects/CPQ_Requester__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DGX</fullName>
            </value>
            <value>
                <fullName>DGX-2</fullName>
            </value>
            <value>
                <fullName>DLI</fullName>
            </value>
            <value>
                <fullName>Drive</fullName>
            </value>
            <value>
                <fullName>GRID</fullName>
            </value>
            <value>
                <fullName>RTX Blade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>