force-app/main/default/objects/CPQ_Requester__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RC</fullName>
            </value>
            <value>
                <fullName>RCC</fullName>
            </value>
            <value>
                <fullName>EC</fullName>
            </value>
            <value>
                <fullName>ECC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>