force-app/main/default/objects/CPQ_Requester__c/fields/Requester_NT_Account__c.field-meta.xml
<CustomField>
    <fullName>Requester_NT_Account__c</fullName>
    <label>Requester NT Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>