force-app/main/default/objects/CPQ_Requester__c/fields/SAP_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Contact__c</fullName>
    <label>SAP Customer Contact #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>