force-app/main/default/objects/CPQ_Requester__c/fields/SQLRecordID__c.field-meta.xml
<CustomField>
    <fullName>SQLRecordID__c</fullName>
    <label>Reference #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>