force-app/main/default/objects/CPQ_Requester__c/validationRules/Check_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Owner</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name &lt;&gt; &apos;System Administrator&apos;,Owner:Queue.Id =&apos;00Gc00000028xh3&apos;)</errorConditionFormula>
    <errorMessage>Queue Name cannot be the owner</errorMessage>
</ValidationRule>