force-app/main/default/objects/CPQ_Requester__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SQLRecordID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request_Type__c</columns>
    <columns>Region__c</columns>
    <columns>Requester__c</columns>
    <columns>CPQ_Account__c</columns>
    <columns>Email_Sent__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>