force-app/main/default/objects/CPQ_Requester__c/listViews/CPQ_Requester_CPQ_Requester.listView-meta.xml
<ListView>
    <fullName>CPQ_Requester_CPQ_Requester</fullName>
    <filterScope>Queue</filterScope>
    <label>CPQ Requester</label>
    <queue>CPQ_Requester</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>