force-app/main/default/objects/CPQ_Requester__c/listViews/My_Request.listView-meta.xml
<ListView>
    <fullName>My_Request</fullName>
    <columns>NAME</columns>
    <columns>SQLRecordID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request_Type__c</columns>
    <columns>Region__c</columns>
    <columns>Requester__c</columns>
    <columns>Company__c</columns>
    <columns>CPQ_Account__c</columns>
    <columns>Email_Sent__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Description__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Email_Sent__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Request</label>
    <language>en_US</language>
</ListView>